    which also has an explicit schema.   Previously
    it was assumed that "current" schema was synonymous
    with the full search_path.  [ticket:2249]

- mysql
  - a CREATE TABLE will put the COLLATE option 
    after CHARSET, which appears to be part of 
    MySQL's arbitrary rules regarding if it will actually
    work or not.  [ticket:2225]  Also in 0.6.9.

- mssql
  - Changes to attempt support of FreeTDS 0.91 with 
    Pyodbc.  This includes that string binds are sent as 
    Python unicode objects when FreeTDS 0.91 is detected,
    and a CAST(? AS NVARCHAR) is used when we detect 
    for a table.   However, I'd continue
    to characterize Pyodbc + FreeTDS 0.91 behavior as 
    pretty crappy, there are still many queries such 
    as used in reflection which cause a core dump on 
    Linux, and it is not really usable at all
    on OSX, MemoryErrors abound and just plain broken 
    unicode support.   [ticket:2273]

  - The behavior of =/!= when comparing a scalar select
    to a value will no longer produce IN/NOT IN as of 0.8;
    this behavior is a little too heavy handed (use in_() if
    you want to emit IN) and now emits a deprecation warning.   
    To get the 0.8 behavior immediately and remove the warning, 
    a compiler recipe is given at 
    http://www.sqlalchemy.org/docs/07/dialects/mssql.html#scalar-select-comparisons
    to override the behavior of visit_binary().
    [ticket:2277]

  - "0" is accepted as an argument for limit() which
    will produce "TOP 0". [ticket:2222]

- oracle
  - Fixed ReturningResultProxy for zxjdbc dialect.
    [ticket:2272].  Regression from 0.6.

  - The String type now generates VARCHAR2 on Oracle
    which is recommended as the default VARCHAR.
    Added an explicit VARCHAR2 and NVARCHAR2 to the Oracle
    dialect as well.   Using NVARCHAR still generates
    "NVARCHAR2" - there is no "NVARCHAR" on Oracle -
    this remains a slight breakage of the "uppercase types